--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "id": "2fa1656e",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "88f81e4b",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "id": "4ed4de67",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "id": "b77e17bf",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "id": "aa070290",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "id": "a8437069",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "id": "106e157d",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "id": "ce0c4c76",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "id": "2e06b990",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "id": "b4ed9a6f",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "id": "cf932e6a",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "id": "ba7f3002",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "id": "1ef011f6",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "id": "8cefe8ca",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "id": "ca8321de",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "id": "62786703",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "id": "b3fe2a60",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "id": "f0050a48",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "id": "c49c47b1",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "id": "087ea252",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_5228\\3975182502.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_4896\\3975182502.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 24,
    "id": "19a63283",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 25,
    "id": "c2a02fd7",
    "metadata": {},
    "outputs": [
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 26,
    "id": "fdd15584",
    "metadata": {},
    "outputs": [
@@ -854,7 +854,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.551\n",
+      "0.532\n",
       "      Id  pred\n",
       "0  11802     1\n",
       "1  11191     1\n",
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 27,
    "id": "9bcb496c",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 28,
    "id": "13724801",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1037,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17.449\n",
+      "17.27\n",
       "     ID    pred\n",
       "0  2860  127.66\n",
       "1  1353  118.44\n",
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 29,
    "id": "75ccdee3",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 30,
    "id": "9674ec91",
    "metadata": {},
    "outputs": [
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 31,
    "id": "87fb4fe3",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "5184f4f8",
    "metadata": {},
    "outputs": [
@@ -1229,8 +1229,200 @@
     "\n",
     "import numpy as np\n",
     "odds_ratio = np.exp(model.params['BMI'])\n",
-    "print(round(odds_ratio, 3))\n",
-    "# 3번 model에서 summary 읽는 법과 오즈비에 대해서 설명, 시험용 코드로도 정리. 시험 문제 중 \"PlanType이 1인 고객이 0인 고객보다 이탈할 오즈비를 구하시오. / 이탈 확률이 0.3 이상인 고객 수를 구하시오.\" 등은 어떻게 해야하는지 예를 들어서 설명"
+    "print(round(odds_ratio, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ed132f2",
+   "metadata": {},
+   "source": [
+    "📝 [제3유형] 회귀분석 종합 문제\n",
+    "문제 1. (다중회귀분석 - OLS) 투약 후 혈압(BP_Post)을 종속변수로 하고, 투약 전 혈압(BP_Pre), 나이(Age), 체질량지수(BMI)를 독립변수로 하는 다중선형회귀 모델을 생성하시오. 이때, **BP_Pre (투약 전 혈압)의 회귀계수(Coefficient)**를 구하시오. (단, 소수점 넷째 자리에서 반올림하여 셋째 자리까지 출력하시오.)\n",
+    "\n",
+    "문제 2. (로지스틱 회귀 - 범주형 변수의 오즈비) 치료 성공 여부(Success)를 종속변수로 하고, Age, BMI, Group을 독립변수로 하는 로지스틱 회귀 모델을 생성하시오. 이때, 'Treatment'(투약군) 그룹의 환자는 'Control'(대조군) 그룹의 환자보다 치료 성공 오즈(Odds)가 몇 배인지(오즈비) 구하시오. (단, Control을 기준(0), Treatment를 비교(1)로 처리하며, 오즈비는 소수점 넷째 자리에서 반올림하여 셋째 자리까지 출력하시오.)\n",
+    "\n",
+    "문제 3. (로지스틱 회귀 - 확률 예측) 2번 문제에서 만든 로지스틱 회귀 모델을 사용하여, 전체 데이터(df) 환자들의 **치료 성공 확률(Probability)**을 예측하시오. 예측된 치료 성공 확률이 **0.6 이상(>= 0.6)**인 환자의 **인원수(명)**를 구하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7edf1e5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "   ID      Group  Age        BMI      BP_Pre     BP_Post  Treatment_Code  \\\n",
+      "0   1  Treatment   39  30.087421  128.659704  135.787762               1   \n",
+      "1   2  Treatment   75  27.065314  128.106733  136.317723               1   \n",
+      "2   3  Treatment   73  25.347528  138.199694  144.206251               1   \n",
+      "\n",
+      "   Success  \n",
+      "0        0  \n",
+      "1        1  \n",
+      "2        1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n = 500\n",
+    "\n",
+    "# 데이터 생성\n",
+    "data = {\n",
+    "    'ID': range(1, n + 1),\n",
+    "    'Group': np.random.choice(['Treatment', 'Control'], n), # 투약군, 대조군\n",
+    "    'Age': np.random.randint(25, 80, n),\n",
+    "    'BMI': np.random.normal(25, 4, n),\n",
+    "    'BP_Pre': np.random.normal(130, 10, n), # 투약 전 혈압\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# 종속변수 생성 (선형 관계)\n",
+    "# 투약 후 혈압 = 투약 전 * 0.9 + 나이 * 0.1 + BMI * 0.5 - (Treatment인 경우 10)\n",
+    "def get_bp_post(row):\n",
+    "    effect = -10 if row['Group'] == 'Treatment' else 0\n",
+    "    base = row['BP_Pre'] * 0.9 + row['Age'] * 0.1 + row['BMI'] * 0.5 + 10\n",
+    "    return base + effect + np.random.normal(0, 2, 1)[0]\n",
+    "\n",
+    "df['BP_Post'] = df.apply(get_bp_post, axis=1)\n",
+    "\n",
+    "# 종속변수 생성 (로지스틱 관계)\n",
+    "# Treatment일 때 성공 확률 증가, BMI 낮을수록 성공\n",
+    "df['Treatment_Code'] = df['Group'].map({'Treatment': 1, 'Control': 0})\n",
+    "logits = -2 + 1.5 * df['Treatment_Code'] - 0.1 * df['BMI'] + 0.02 * df['Age']\n",
+    "probs = 1 / (1 + np.exp(-logits))\n",
+    "df['Success'] = np.random.binomial(1, probs)\n",
+    "\n",
+    "print(\"데이터 생성 완료!\")\n",
+    "print(df.head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab9697e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.895\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1번 문제\n",
+    "from statsmodels.formula.api import ols\n",
+    "model = ols('BP_Post ~ BP_Pre + Age + BMI', data=df).fit()\n",
+    "coef = model.params['BP_Pre']\n",
+    "print(round(coef, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8557132c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.208368\n",
+      "         Iterations 9\n",
+      "19.577\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2번 문제\n",
+    "from statsmodels.formula.api import logit\n",
+    "model = logit('Success ~ Age + BMI + Group', data=df).fit()\n",
+    "coef = model.params['Group[T.Treatment]']\n",
+    "# 설명 (자동 더미 변수화 - 문자열)\n",
+    "odds_ratio = np.exp(coef)\n",
+    "print(round(odds_ratio, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4341ef4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3번 문제 - 외우기\n",
+    "pred_proba = model.predict(df)\n",
+    "target = pred_proba[pred_proba >= 0.6]\n",
+    "result = len(target)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb3eda20",
+   "metadata": {},
+   "source": [
+    "📝 [제3유형] 분산분석표 (ANOVA Table) 해석\n",
+    "문제 1. (ANOVA 모델 적합) 식이요법 유형(Diet)에 따른 체중 감량(Weight_Loss)의 차이를 분석하기 위해, ols 함수를 사용하여 선형 회귀 모델을 생성하고 적합(fit)시키시오. 생성된 모델 객체를 이용하여 anova_lm 함수를 실행하고, 결과 테이블에서 **Diet 변수의 F-통계량(F-value)**을 구하시오. (단, 반올림하여 소수 셋째 자리까지 출력하시오.)\n",
+    "\n",
+    "문제 2. (잔차 제곱합 - SSE) 1번에서 구한 분산분석표(ANOVA Table)를 확인하여, 설명되지 않는 변동인 **잔차(Residual)의 제곱합(Sum of Squares)**을 구하시오. (단, 반올림하여 소수 셋째 자리까지 출력하시오.)\n",
+    "\n",
+    "문제 3. (p-value 해석) 분산분석 결과의 **p-값(PR(>F))**을 구하고, 유의수준 0.05 하에서 귀무가설(세 그룹의 평균은 같다)을 기각할 수 있는지 판단하시오. (p-값은 소수 넷째 자리까지 반올림하여 출력하고, 기각 여부는 \"기각\" 또는 \"채택\"으로 출력하시오. 정답 예시: 0.0123 기각)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f7434c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n = 150\n",
+    "\n",
+    "# 데이터 생성\n",
+    "data = {\n",
+    "    'ID': range(1, n + 1),\n",
+    "    'Diet': np.random.choice(['Type_A', 'Type_B', 'Type_C'], n),\n",
+    "    'Weight_Loss': np.zeros(n)\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# 그룹별 효과 부여 (C > B > A 순으로 감량 효과 큼)\n",
+    "def get_weight_loss(diet):\n",
+    "    base = np.random.normal(2, 1) # 기본 감량\n",
+    "    if diet == 'Type_B': return base + 2  # B는 +2kg 더 감량\n",
+    "    elif diet == 'Type_C': return base + 4 # C는 +4kg 더 감량\n",
+    "    else: return base # A는 기본\n",
+    "\n",
+    "df['Weight_Loss'] = df['Diet'].apply(get_weight_loss)\n",
+    "\n",
+    "print(\"데이터 생성 완료!\")\n",
+    "print(df.head())"
    ]
   }
  ],
