--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -1392,10 +1392,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "6f7434c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "   ID    Diet  Weight_Loss\n",
+      "0   1  Type_C     6.616633\n",
+      "1   2  Type_C     5.644096\n",
+      "2   3  Type_C     6.007296\n",
+      "3   4  Type_C     3.862329\n",
+      "4   5  Type_A     2.226040\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -1423,6 +1437,42 @@
     "\n",
     "print(\"데이터 생성 완료!\")\n",
     "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2cc46efd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             df      sum_sq     mean_sq          F        PR(>F)\n",
+      "C(Diet)     2.0  433.580080  216.790040  238.35233  7.359841e-47\n",
+      "Residual  147.0  133.701801    0.909536        NaN           NaN\n",
+      "238.352\n",
+      "133.702\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.formula.api import ols\n",
+    "from statsmodels.stats.anova import anova_lm\n",
+    "model = ols('Weight_Loss ~C(Diet)', data=df).fit()\n",
+    "anova_table = anova_lm(model)\n",
+    "print(anova_table)\n",
+    "\n",
+    "f_stat = anova_table.loc['C(Diet)', 'F']\n",
+    "print(round(f_stat, 3))\n",
+    "\n",
+    "sse = anova_table.loc['Residual', 'sum_sq']\n",
+    "print(round(sse, 3))\n",
+    "\n",
+    "p_val = anova_table.loc['C(Diet)', 'PR(>F)']\n",
+    "print(round(p_val, 4))"
    ]
   }
  ],
