--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -1088,6 +1088,167 @@
   },
   {
    "cell_type": "markdown",
+   "id": "58b73708",
+   "metadata": {},
+   "source": [
+    "📝 [제2유형] 전자상거래 구매 예측\n",
+    "문제: 제공된 고객 데이터(train)를 이용하여 고객이 상품을 구매할지(Purchase) 여부를 예측하는 모델을 만들고, 평가용 데이터(test)에 대한 예측 결과를 result.csv 파일로 제출하시오.\n",
+    "\n",
+    "1. 데이터 설명\n",
+    "\n",
+    "Target: Purchase (1: 구매, 0: 비구매)\n",
+    "\n",
+    "Features:\n",
+    "\n",
+    "UserID: 고객 ID (불필요한 식별자)\n",
+    "\n",
+    "Age, AnnualIncome, BrowsingTime, PagesViewed: 수치형 정보\n",
+    "\n",
+    "MembershipTier: 회원 등급 (Bronze, Silver, Gold)\n",
+    "\n",
+    "DeviceType: 접속 기기 (Mobile, Desktop, Tablet)\n",
+    "\n",
+    "2. 제출 형식\n",
+    "\n",
+    "result.csv 파일로 저장.\n",
+    "\n",
+    "**UserID**와 pred 두 개의 컬럼만 포함.\n",
+    "\n",
+    "pred 컬럼에는 **구매할 확률(Probability)**을 제출하시오. (0~1 사이 값)\n",
+    "\n",
+    "3. 평가 지표\n",
+    "\n",
+    "ROC-AUC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "18d8d25e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료! (결측치 없음)\n",
+      "train shape: (2800, 8)\n",
+      "test shape: (1200, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n_rows = 4000\n",
+    "\n",
+    "# 1. 데이터 생성\n",
+    "data = {\n",
+    "    'UserID': np.arange(10001, 10001 + n_rows),\n",
+    "    'Age': np.random.randint(18, 70, n_rows),\n",
+    "    'AnnualIncome': np.random.randint(20000, 150000, n_rows),\n",
+    "    'BrowsingTime': np.random.normal(30, 10, n_rows), # 분 단위\n",
+    "    'PagesViewed': np.random.randint(1, 20, n_rows),\n",
+    "    'MembershipTier': np.random.choice(['Bronze', 'Silver', 'Gold'], n_rows, p=[0.5, 0.3, 0.2]),\n",
+    "    'DeviceType': np.random.choice(['Mobile', 'Desktop', 'Tablet'], n_rows),\n",
+    "    'Purchase': 0 # Target 초기화\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# 2. Target 생성 (구매 확률: 골드 회원일수록, 수입이 많을수록, 많이 볼수록 높음)\n",
+    "logits = -5 + (df['AnnualIncome'] / 50000) + (df['BrowsingTime'] / 20) + (df['PagesViewed'] / 5)\n",
+    "logits += np.where(df['MembershipTier'] == 'Gold', 2, 0)\n",
+    "logits += np.where(df['MembershipTier'] == 'Silver', 1, 0)\n",
+    "probs = 1 / (1 + np.exp(-logits))\n",
+    "df['Purchase'] = np.random.binomial(1, probs)\n",
+    "\n",
+    "# 3. 데이터 분리\n",
+    "X = df.drop('Purchase', axis=1)\n",
+    "y = df['Purchase']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# 시험 제공 형태\n",
+    "train = pd.concat([X_train, y_train], axis=1)\n",
+    "test = X_test\n",
+    "\n",
+    "print(\"데이터 생성 완료! (결측치 없음)\")\n",
+    "print(f\"train shape: {train.shape}\")\n",
+    "print(f\"test shape: {test.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "00ab57ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.787\n",
+      "      UserID  pred\n",
+      "0      10556  0.51\n",
+      "1      13492  0.71\n",
+      "2      10528  0.99\n",
+      "3      13926  0.62\n",
+      "4      12990  0.95\n",
+      "...      ...   ...\n",
+      "1195   13857  0.73\n",
+      "1196   10227  0.50\n",
+      "1197   11613  0.91\n",
+      "1198   10536  0.64\n",
+      "1199   13849  0.66\n",
+      "\n",
+      "[1200 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(test.info())\n",
+    "# 제거: UserID\n",
+    "# 인코딩: MembershipTier, DeviceType\n",
+    "# 확률 -> classfier\n",
+    "\n",
+    "X = train.drop(['UserID', 'Purchase'], axis=1)\n",
+    "y = train['Purchase']\n",
+    "X_submit = test.drop('UserID', axis=1)\n",
+    "\n",
+    "cols = ['MembershipTier', 'DeviceType']\n",
+    "\n",
+    "X = pd.get_dummies(X, columns=cols)\n",
+    "X_submit = pd.get_dummies(X_submit, columns=cols)\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2)\n",
+    "model = RandomForestClassifier(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "pred_proba = model.predict_proba(X_val)[:,1]\n",
+    "\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "score = roc_auc_score(y_val, pred_proba)\n",
+    "print(round(score, 3))\n",
+    "\n",
+    "model.fit(X, y)\n",
+    "pred_proba_final = model.predict_proba(X_submit)[:,1]\n",
+    "\n",
+    "result = pd.DataFrame({\n",
+    "    'UserID': test['UserID'],\n",
+    "    'pred': pred_proba_final\n",
+    "})\n",
+    "\n",
+    "result.to_csv('result2.csv', index=False)\n",
+    "print(pd.read_csv('result2.csv'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "45360579",
    "metadata": {},
    "source": [
