--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "id": "2fa1656e",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "id": "88f81e4b",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "id": "4ed4de67",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "id": "b77e17bf",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "id": "aa070290",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "id": "a8437069",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "id": "106e157d",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "id": "ce0c4c76",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 92,
    "id": "2e06b990",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 93,
    "id": "b4ed9a6f",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 94,
    "id": "cf932e6a",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 95,
    "id": "ba7f3002",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "id": "1ef011f6",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 97,
    "id": "8cefe8ca",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 98,
    "id": "ca8321de",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 99,
    "id": "62786703",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 100,
    "id": "b3fe2a60",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 101,
    "id": "f0050a48",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 102,
    "id": "c49c47b1",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 103,
    "id": "087ea252",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 104,
    "id": "19a63283",
    "metadata": {},
    "outputs": [
@@ -716,6 +716,153 @@
     "df = df.dropna(subset=['Price'])\n",
     "df = df.sort_values(by='Price', ascending=False)\n",
     "print(df.iloc[4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "431efbfd",
+   "metadata": {},
+   "source": [
+    "📝 실전 연습 문제 (Subway Traffic)\n",
+    "\n",
+    "문제 1. (시계열 집계 & 최댓값)Line_2 호선에 해당하는 데이터만 필터링합니다.Date 컬럼을 활용하여 '월(Month)'별 승차 인원(Get_On)의 총합을 구했을 때, 승차 인원이 가장 많았던 **월(Month)**을 구하시오.(단, Get_On의 결측치는 제거하고 계산하며, 정수로 출력하시오.)\n",
+    "\n",
+    "문제 2. (파생변수 & 절댓값 정렬)모든 데이터에 대해 '승하차 차이' (Diff) 컬럼을 생성합니다. 계산 식은 Get_On - Get_Off입니다. (결측치가 포함된 행은 제거)이 Diff 값의 **절댓값(Absolute Value)**이 가장 큰 상위 3개 역(Station)을 찾고, 그 중 첫 번째 역의 이름을 출력하시오.(동점자가 있을 경우 행의 순서대로 처리)\n",
+    "\n",
+    "문제 3. (IQR 이상치 탐색)Line_1 호선의 Get_Off (하차 인원) 데이터를 대상으로 이상치를 탐색합니다.IQR 방식을 이용하여 이상치(Outlier)로 판단되는 데이터의 개수를 구하시오.$Q1$: 하위 25%, $Q3$: 상위 75%$IQR = Q3 - Q1$이상치 기준: $(Q1 - 1.5 \\times IQR)$ 미만 이거나 $(Q3 + 1.5 \\times IQR)$ 초과"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "8e2b5fd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "                 Date    Line    Station  Get_On  Get_Off\n",
+      "0 2023-01-01 02:00:00  Line_2  Station_O   292.0      298\n",
+      "1 2023-01-01 05:00:00  Line_4  Station_A   882.0      370\n",
+      "2 2023-01-01 09:00:00  Line_3  Station_S   871.0      813\n",
+      "3 2023-01-01 10:00:00  Line_5  Station_P   636.0      336\n",
+      "4 2023-01-01 11:00:00  Line_2  Station_J   548.0      545\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n_rows = 5000\n",
+    "\n",
+    "# 데이터 생성\n",
+    "dates = pd.date_range('2023-01-01', '2023-12-31', freq='h') # 시간 단위지만 5000개만 샘플링\n",
+    "dates = np.random.choice(dates, n_rows)\n",
+    "\n",
+    "lines = ['Line_1', 'Line_2', 'Line_3', 'Line_4', 'Line_5']\n",
+    "stations = [f'Station_{chr(i)}' for i in range(65, 85)] # A ~ T\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Date': dates,\n",
+    "    'Line': np.random.choice(lines, n_rows),\n",
+    "    'Station': np.random.choice(stations, n_rows),\n",
+    "    'Get_On': np.random.randint(10, 1000, n_rows),\n",
+    "    'Get_Off': np.random.randint(10, 1000, n_rows)\n",
+    "})\n",
+    "\n",
+    "# 결측치 주입 (Get_On)\n",
+    "df.loc[np.random.choice(df.index, 100), 'Get_On'] = np.nan\n",
+    "\n",
+    "# 데이터 정렬\n",
+    "df = df.sort_values('Date').reset_index(drop=True)\n",
+    "\n",
+    "print(\"데이터 생성 완료!\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "9f8ca62d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1번\n",
+    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "df['Month'] = df['Date'].dt.month\n",
+    "\n",
+    "df_line2 = df[df['Line']=='Line_2']\n",
+    "q1 = df_line2.groupby('Month')['Get_On'].sum()\n",
+    "print(q1.idxmax())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c102974c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Station\n",
+      "Station_H    11493.0\n",
+      "Station_R     8754.0\n",
+      "Station_D     8118.0\n",
+      "Name: Diff, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 2번\n",
+    "df['Diff'] = df['Get_On'] - df['Get_Off']\n",
+    "q2 = df.groupby('Station')['Diff'].sum().sort_values(ascending=False)\n",
+    "print(np.abs(q2).head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cece8ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 3번\n",
+    "df_1 = df[df['Line']=='Line_1'][['Line', 'Get_Off']]\n",
+    "Q1 = df_1['Get_Off'].quantile(0.25)\n",
+    "Q3 = df_1['Get_Off'].quantile(0.75)\n",
+    "IQR = Q3 - Q1\n",
+    "\n",
+    "lower_bound = (Q1 - 1.5 * IQR)\n",
+    "high_bound = (Q3 + 1.5 * IQR)\n",
+    "\n",
+    "df_outer = df_1[(df_1['Get_Off'] > high_bound) | (df_1['Get_Off'] < lower_bound)]\n",
+    "result = len(df_outer)\n",
+    "print(result)\n",
+    "\n",
+    "#df_2 = df[df['Line']=='Line_1']['Get_Off']\n",
+    "#print(df_2)"
    ]
   },
   {
@@ -759,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c2a02fd7",
    "metadata": {},
    "outputs": [
@@ -846,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "fdd15584",
    "metadata": {},
    "outputs": [
@@ -954,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "9bcb496c",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "13724801",
    "metadata": {},
    "outputs": [
@@ -1123,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "18d8d25e",
    "metadata": {},
    "outputs": [
@@ -1183,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "00ab57ed",
    "metadata": {},
    "outputs": [
@@ -1262,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "75ccdee3",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "9674ec91",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "87fb4fe3",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "5184f4f8",
    "metadata": {},
    "outputs": [
@@ -1408,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "7edf1e5b",
    "metadata": {},
    "outputs": [
@@ -1553,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "6f7434c7",
    "metadata": {},
    "outputs": [
@@ -1602,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "2cc46efd",
    "metadata": {},
    "outputs": [
