--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "id": "2fa1656e",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "id": "88f81e4b",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "id": "4ed4de67",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "b77e17bf",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "id": "aa070290",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "id": "a8437069",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "id": "106e157d",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "ce0c4c76",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "id": "2e06b990",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "id": "b4ed9a6f",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "id": "cf932e6a",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "id": "ba7f3002",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "id": "1ef011f6",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "id": "8cefe8ca",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "id": "ca8321de",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "id": "62786703",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "id": "b3fe2a60",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "id": "f0050a48",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "id": "c49c47b1",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "id": "087ea252",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_4896\\3975182502.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_12936\\3975182502.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "id": "19a63283",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 22,
    "id": "8e2b5fd3",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 23,
    "id": "9f8ca62d",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "c102974c",
    "metadata": {},
    "outputs": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "0cece8ce",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "c2a02fd7",
    "metadata": {},
    "outputs": [
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "fdd15584",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "9bcb496c",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "13724801",
    "metadata": {},
    "outputs": [
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "18d8d25e",
    "metadata": {},
    "outputs": [
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "00ab57ed",
    "metadata": {},
    "outputs": [
@@ -1338,7 +1338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.787\n",
+      "0.806\n",
       "      UserID  pred\n",
       "0      10556  0.51\n",
       "1      13492  0.71\n",
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "75ccdee3",
    "metadata": {},
    "outputs": [
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "9674ec91",
    "metadata": {},
    "outputs": [
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "87fb4fe3",
    "metadata": {},
    "outputs": [
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "5184f4f8",
    "metadata": {},
    "outputs": [
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "7edf1e5b",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "ab9697e4",
    "metadata": {},
    "outputs": [
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "8557132c",
    "metadata": {},
    "outputs": [
@@ -1665,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "4341ef4b",
    "metadata": {},
    "outputs": [
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "6f7434c7",
    "metadata": {},
    "outputs": [
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "2cc46efd",
    "metadata": {},
    "outputs": [
@@ -1780,6 +1780,134 @@
     "print(round(sse, 3))\n",
     "\n",
     "p_val = anova_table.loc['C(Diet)', 'PR(>F)']\n",
+    "print(round(p_val, 4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20094737",
+   "metadata": {},
+   "source": [
+    "📝 [제3유형] 비모수 & 비율 & 회귀 평가\n",
+    "\n",
+    "문제 1. (비모수 대응표본 검정 - 윌콕슨 부호순위)동일한 고객의 캠페인 전(Satis_Pre)과 후(Satis_Post)의 만족도 차이를 비교하려고 합니다.데이터가 정규성을 만족하지 않는다고 가정하고, **윌콕슨 부호순위 검정(Wilcoxon Signed-Rank Test)**을 수행하시오.이때의 **검정통계량(statistic)**을 구하시오.(단, 반올림하여 소수 셋째 자리까지 출력하시오.)\n",
+    "\n",
+    "문제 2. (선형 회귀분석 - 결정계수 $R^2$)구매 금액(Purchase)을 종속변수로 하고, 캠페인 전 만족도(Satis_Pre)와 후 만족도(Satis_Post)를 독립변수로 하는 다중선형회귀 모델을 생성하시오. (ols 사용)이 모델의 결정계수(R-squared) 값을 구하시오.(단, 반올림하여 소수 셋째 자리까지 출력하시오.)\n",
+    "       \n",
+    "문제 3. (비율 검정 - 1표본)전체 고객 중 이벤트 배너를 클릭(Clicked=1)한 비율이 **35%**와 다른지 검정하려고 합니다.**1표본 비율 검정(One-Proportion Z-test)**을 수행하고 p-값을 구하시오.(단, proportions_ztest를 사용하되, alternative='two-sided'(양측검정)로 설정하며, p-값은 소수 넷째 자리까지 출력하시오.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "bbd2aef9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "   ID    Store  Satis_Pre      Purchase  Clicked  Satis_Post\n",
+      "0   1   Jamsil          4  50280.810091        1           6\n",
+      "1   2   Jamsil          5  46781.064946        1           5\n",
+      "2   3   Jamsil          7  37092.167520        1           9\n",
+      "3   4   Jamsil          6  65087.481495        1           8\n",
+      "4   5  Gangnam          7  58943.399478        1           9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n = 200\n",
+    "\n",
+    "data = {\n",
+    "    'ID': range(1, n + 1),\n",
+    "    'Store': np.random.choice(['Gangnam', 'Hongdae', 'Jamsil'], n),\n",
+    "    'Satis_Pre': np.random.randint(3, 8, n),\n",
+    "    'Purchase': np.random.normal(50000, 10000, n),\n",
+    "    'Clicked': np.random.binomial(1, 0.4, n) # 40% 확률로 클릭\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# 만족도 후: 전보다 평균 1.5점 상승, 정규분포 아님(순위형)\n",
+    "df['Satis_Post'] = df['Satis_Pre'] + np.random.choice([0, 1, 2, 3], n, p=[0.1, 0.3, 0.4, 0.2])\n",
+    "df['Satis_Post'] = df['Satis_Post'].clip(upper=10) # 10점 만점 제한\n",
+    "\n",
+    "print(\"데이터 생성 완료!\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d4f428b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1번\n",
+    "group_before = df['Satis_Pre']\n",
+    "group_after = df['Satis_Post']\n",
+    "\n",
+    "from scipy.stats import wilcoxon\n",
+    "stat, p_val = wilcoxon(group_before, group_after)\n",
+    "print(round(stat, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2664382",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.002\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 2번\n",
+    "from statsmodels.formula.api import ols\n",
+    "model = ols('Purchase ~ Satis_Pre + Satis_Post', data=df).fit()\n",
+    "print(round(model.rsquared, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "d713e54d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8825\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 3번\n",
+    "count = df['Clicked'].sum()\n",
+    "nobs = len(df)\n",
+    "\n",
+    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "stat, p_val = proportions_ztest(count, nobs, value=0.35, alternative='two-sided')\n",
     "print(round(p_val, 4))"
    ]
   }
