--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -1910,6 +1910,109 @@
     "stat, p_val = proportions_ztest(count, nobs, value=0.35, alternative='two-sided')\n",
     "print(round(p_val, 4))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47917312",
+   "metadata": {},
+   "source": [
+    "📝 [제3유형] 통신사 고객 이탈 분석\n",
+    "한 통신 회사에서는 고객 이탈을 줄이고자 주요 요인들을 분석하기로 결정하였다. 이를 위해 500명의 고객 데이터를 수집했으며 고객의 서비스 이용 및 가입정보, 그리고 일부 개인적인 속성을 조사하였다.\n",
+    "\n",
+    "1. 모든 컬럼(ID 제외)을 활용하여 Churn(이탈 여부)을 예측하는 로지스틱 회귀 분석을 시행한 후, col1 칼럼의 p-value를 구하시오. (단, Contract 변수는 범주형으로 처리하며, 결과값은 반올림하여 소수 셋째 자리까지 출력하시오.)\n",
+    "\n",
+    "2. 위 모델에서 PhoneService를 받지 않은 고객(0) 대비 받은 고객(1)의 이탈 확률 오즈비(Odds Ratio)를 구하시오. (단, 반올림하여 소수 셋째 자리까지 출력하시오.)\n",
+    "\n",
+    "3. 위 모델을 활용하여 전체 고객의 이탈 확률(Probability)을 예측하고, 이탈할 확률이 0.3 이상인 고객 수를 구하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "12636bf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "   ID       col1  Tenure  PhoneService        Contract  Churn\n",
+      "0   1  67.228295      32             1  Month-to-month      0\n",
+      "1   2  92.028567      17             1  Month-to-month      1\n",
+      "2   3  26.833539      71             1        One year      0\n",
+      "3   4  50.097339      20             1  Month-to-month      0\n",
+      "4   5  66.978157       6             0        Two year      1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n = 500\n",
+    "\n",
+    "# 1. 독립변수 생성\n",
+    "data = {\n",
+    "    'ID': range(1, n + 1),\n",
+    "    'col1': np.random.normal(70, 30, n), # 월 요금 (수치형)\n",
+    "    'Tenure': np.random.randint(1, 72, n), # 가입 기간 (수치형)\n",
+    "    'PhoneService': np.random.choice([0, 1], n, p=[0.1, 0.9]), # 0: 미가입, 1: 가입\n",
+    "    'Contract': np.random.choice(['Month-to-month', 'One year', 'Two year'], n)\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# 2. 종속변수(Churn) 생성 (로지스틱 관계)\n",
+    "# col1(요금)이 높을수록, Tenure(기간)가 짧을수록, PhoneService가 없을수록 이탈 확률 높음\n",
+    "# Contract: Month-to-month가 이탈 확률 높음\n",
+    "contract_map = {'Month-to-month': 2, 'One year': 1, 'Two year': 0}\n",
+    "contract_score = df['Contract'].map(contract_map)\n",
+    "\n",
+    "logits = -3 + (0.05 * df['col1']) - (0.05 * df['Tenure']) + (0.5 * contract_score) - (1.2 * df['PhoneService'])\n",
+    "probs = 1 / (1 + np.exp(-logits))\n",
+    "df['Churn'] = np.random.binomial(1, probs)\n",
+    "\n",
+    "print(\"데이터 생성 완료!\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "9bb42917",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.387853\n",
+      "         Iterations 7\n",
+      "0.0\n",
+      "0.332\n",
+      "128\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1번\n",
+    "df_d = df.drop('ID', axis=1)\n",
+    "from statsmodels.formula.api import logit\n",
+    "model = logit('Churn ~ col1 + Tenure + PhoneService + C(Contract)', data=df_d).fit()\n",
+    "print(round(model.pvalues['col1'], 3))\n",
+    "\n",
+    "# 문제 2번\n",
+    "odds_ratio = np.exp(model.params['PhoneService'])\n",
+    "print(round(odds_ratio, 3))\n",
+    "\n",
+    "# 문제 3번\n",
+    "pred = model.predict(df_d)\n",
+    "result3 = sum(pred >= 0.3)\n",
+    "print(result3)"
+   ]
   }
  ],
  "metadata": {
